--- a/app/views/staff_mailer/order_is_submitted.text.erb
+++ b/app/views/staff_mailer/order_is_submitted.text.erb
@@ -1,10 +1,20 @@
 Order <%= @order.id %> has been submitted for Customer <%= @customer.name %> at <%= @customer.email %>.
 
-The order consists of the following <%= @order.item.count %> items:
+The order consists of the following <%= @order.item.count rescue 0 %> items and <%= @order.combo.count rescue 0 %> combinations:
 
+<%= "Items:" if @order.item.present? %>
 <% @order.item.each do |order_item| %>
 <%= order_item.name %>
-<% end %>
+<% end if @order.item.present? %>
+
+<%= "Combinations:" if @order.combo.present? %>
+<% @order.combo.each do |com| %>
+<%=  "Combo name: " + com.name %>
+<%    com.combo_items.each do | combo_item | %>
+<%=     combo_item.item.name %>
+<%    end %>
+<% end if @order.combo.present? %>
+
 with a total price of <%= number_to_currency(@order.total / 100.to_d) %>
 
 Please notify the customer as soon as the order is ready for pickup.
